<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2025 Pera Wallet, LDA
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/showQRRootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/spacing_xlarge"
        android:paddingVertical="@dimen/spacing_large"
        tools:background="@color/primary_background">

        <ImageView
            android:id="@+id/qrImageView"
            android:layout_width="@dimen/show_qr_size"
            android:layout_height="@dimen/show_qr_size"
            android:layout_marginTop="@dimen/spacing_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@color/white"
            tools:srcCompat="@drawable/ic_qr" />

        <TextView
            android:id="@+id/instructionTextView"
            style="@style/TextAppearance.Body.Sans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:gravity="center_horizontal"
            android:text="@string/scan_qr_with_pera_or_defly_bridge"
            app:layout_constraintTop_toBottomOf="@id/qrImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tokenToSendLabelTextView"
            style="@style/TextAppearance.Footnote.Sans.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/token_to_send_label"
            app:layout_constraintTop_toBottomOf="@id/instructionTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tokenToSendTextView"
            style="@style/TextAppearance.Body.Sans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:gravity="end"
            app:layout_constraintTop_toTopOf="@id/tokenToSendLabelTextView"
            app:layout_constraintBottom_toBottomOf="@id/tokenToSendLabelTextView"
            app:layout_constraintStart_toEndOf="@id/tokenToSendLabelTextView"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="aVOI" />

        <TextView
            android:id="@+id/amountToSendLabelTextView"
            style="@style/TextAppearance.Footnote.Sans.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/amount_to_send_label"
            app:layout_constraintTop_toBottomOf="@id/tokenToSendLabelTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/amountToSendTextView"
            style="@style/TextAppearance.Body.Sans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:gravity="end"
            app:layout_constraintTop_toTopOf="@id/amountToSendLabelTextView"
            app:layout_constraintBottom_toBottomOf="@id/amountToSendLabelTextView"
            app:layout_constraintStart_toEndOf="@id/amountToSendLabelTextView"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="100.00 aVOI" />

        <TextView
            android:id="@+id/amountToReceiveLabelTextView"
            style="@style/TextAppearance.Footnote.Sans.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/amount_to_receive_label"
            app:layout_constraintTop_toBottomOf="@id/amountToSendLabelTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/amountToReceiveTextView"
            style="@style/TextAppearance.Body.Sans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:gravity="end"
            app:layout_constraintTop_toTopOf="@id/amountToReceiveLabelTextView"
            app:layout_constraintBottom_toBottomOf="@id/amountToReceiveLabelTextView"
            app:layout_constraintStart_toEndOf="@id/amountToReceiveLabelTextView"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="99.50 VOI" />

        <TextView
            android:id="@+id/receivingAccountLabelTextView"
            style="@style/TextAppearance.Footnote.Sans.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/receiving_account_on_voi_label"
            app:layout_constraintTop_toBottomOf="@id/amountToReceiveLabelTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/receivingAccountTextView"
            style="@style/TextAppearance.Body.Sans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:gravity="end"
            app:layout_constraintTop_toTopOf="@+id/receivingAccountLabelTextView"
            app:layout_constraintBottom_toBottomOf="@+id/receivingAccountLabelTextView"
            app:layout_constraintStart_toEndOf="@+id/receivingAccountLabelTextView"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="VOIADDRESSLONGSTRING..." />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
